<resources>
    <string name="app_name">Story App Submission 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="home">Beranda</string>
    <string name="buatcerita">Upload Story</string>
    <string name="logout">Keluar</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita?</string>
    <string name="message_login_page">Masukan dulu datamu ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="name">Nama</string>
    <string name="signup">Daftar</string>
    <string name="message_welcome_page">Mau cerita tentang keseharian kamu belajar programming? Cerita di Story!</string>
    <string name="title_welcome_page">Selamat datang di Story!</string>
    <string name="image_description">Deskripsi</string>
    <string name="no_story">No Story</string>
    <string name="title">Judul Card</string>
    <string name="location_permission_needed">Permission for location is required to access this feature.</string>
    <string name="img_desc">Detail Image Description</string>
    <string name="cameraswitch">Camera Switch</string>
    <string name="camera_button">Button Camera</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="signup_image_description">Signup Image Description</string>
    <string name="preview_image">Preview Image</string>
    <string name="image_login">Image Login</string>
    <string name="name_label">Name</string>
    <string name="desc_label">Description</string>
    <string name="welcome_description">Welcome Image</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_description">Add Description</string>
    <string name="text_plain">text/plain</string>
    <string name="image_jpeg">image/jpeg</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="add_story_success">Add Story Success</string>
    <string name="error">Error: %1$s</string>
    <string name="failed_to_add_story">Failed to add story: %1$s</string>
    <string name="failed_start_camera">Failed start camera</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="email_must_not_be_empty">Email must not be empty</string>
    <string name="password_must_not_be_empty">Password must not be empty.</string>
    <string name="password_must_be_at_least_8_characters_long">Password must be at least 8 characters long.</string>
    <string name="error_login">Error</string>
    <string name="ok">OK</string>
    <string name="login_failed_please_ensure_the_email_and_password_are_valid">Login failed!</string>
    <string name="login_successful">Login successful</string>
    <string name="all_fields_must_be_filled">All fields must be filled.</string>
    <string name="account_with_has_been_created">Your account with %1$s has been successfully created!.</string>
    <string name="registration_failed_response_body_is_null">Registration failed: Response body is null.</string>
    <string name="registration_failed">Registration failed: %1$s</string>
    <string name="registration_failed_2">Registration failed: %1$s</string>
    <string name="unknown_error">Unknown error</string>
    <string name="password_8_characters">Password harus memiliki setidaknya 8 karakter</string>
    <string name="invalid_token">invalid Token</string>
    <string name="maps">Lokasi Story</string>
    <string name="retry">Retry</string>
</resources>